package com.springboot.MyTodoList.model;

import jakarta.persistence.*;
import java.time.LocalDate;
import java.time.LocalDateTime;

@Entity
@Table(name = "tasks")
public class Task {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(name = "user_id")
    private Long userId;

    @Column(nullable = false, length = 200)
    private String title;

    @Column(length = 500)
    private String description;

    @Column(length = 20)
    private String status = "pending"; // pending, in_progress, completed

    private Integer priority = 1;

    @Column(length = 50)
    private String category;

    @Column(name = "due_date")
    private LocalDate dueDate;

    @Column(name = "team_id")
    private Long teamId;

    @Column(name = "is_deleted")
    private Integer isDeleted = 0; // 0 activo 1 borrado

    @Column(name = "created_at", insertable = false, updatable = false)
    private LocalDateTime createdAt;

    @Column(name = "updated_at")
    private LocalDateTime updatedAt;

    @Column(name = "hour_estimate")
    private Integer hoursEstimate;

    @Column(name = "real_hours")
    private Integer realHours;

    @Column(name = "sprint")
    private Integer sprint;

    // Constructor vacío requerido por Spring/JPA
    public Task() {
    }

    // --- GETTERS Y SETTERS ---

    public Long getId() { return id; }
    public void setId(Long id) { this.id = id; }

    public Long getUserId() { return userId; }
    public void setUserId(Long userId) { this.userId = userId; }

    public String getTitle() { return title; }
    public void setTitle(String title) { this.title = title; }

    public String getDescription() { return description; }
    public void setDescription(String description) { this.description = description; }

    public String getStatus() { return status; }
    public void setStatus(String status) { this.status = status; }

    public Integer getPriority() { return priority; }
    public void setPriority(Integer priority) { this.priority = priority; }

    public String getCategory() { return category; }
    public void setCategory(String category) { this.category = category; }

    public LocalDate getDueDate() { return dueDate; }
    public void setDueDate(LocalDate dueDate) { this.dueDate = dueDate; }

    public Long getTeamId() { return teamId; }
    public void setTeamId(Long teamId) { this.teamId = teamId; }

    public Integer getIsDeleted() { return isDeleted; }
    public void setIsDeleted(Integer isDeleted) { this.isDeleted = isDeleted; }

    public LocalDateTime getCreatedAt() { return createdAt; }
    public void setCreatedAt(LocalDateTime createdAt) { this.createdAt = createdAt; }

    public LocalDateTime getUpdatedAt() { return updatedAt; }
    public void setUpdatedAt(LocalDateTime updatedAt) { this.updatedAt = updatedAt; }

    public Integer getHoursEstimate() { return hoursEstimate; }
    public void setHoursEstimate(Integer hoursEstimate) { this.hoursEstimate = hoursEstimate; }

    public Integer getRealHours() { return realHours; }
    public void setRealHours(Integer realHours) { this.realHours = realHours; }

    public Integer getSprint() { return sprint; }
    public void setSprint(Integer sprint) { this.sprint = sprint; }
}